Use picocli and added JavaDocs